Hero Section Completed

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
             href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
             integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
 
+            <!-- Bootstrap Icon CDN -->
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg shadow-sm navbar-white bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand px-5" href="#"><img src="/images/kuda-logo.png" alt="logo"></a>
+            <a class="navbar-brand px-5" href="#"><img src="images/kuda-logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,11 +44,15 @@
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"> Personal
                         </a>
                         <ul class="dropdown-menu fade-up">
-                            <li><a class="dropdown-item" href="#"> Kuda Card</a></li>
-                            <li><a class="dropdown-item" href="#"> Spend </a></li>
-                            <li><a class="dropdown-item" href="#"> Save </a></li>
-                            <li><a class="dropdown-item" href="#"> Budget </a></li>
-                            <li><a class="dropdown-item" href="#"> Borrow</a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="bi bi-credit-card-fill iconColor px-2"></i> Kuda Card</a>
+                            </li>
+                            <li><a class="dropdown-item" href="#"> <i class="bi bi-arrow-up-square-fill iconColor px-2"></i> Spend </a>
+                            </li>
+                            <li><a class="dropdown-item" href="#"> <i class="bi bi-save-fill iconColor px-2"></i>Save </a></li>
+                            <li><a class="dropdown-item" href="#"> <i class="bi bi-calculator-fill iconColor px-2"></i> Budget </a>
+                            </li>
+                            <li><a class="dropdown-item" href="#"> <i class="bi bi-file-earmark-arrow-up-fill iconColor px-2"></i>
+                                    Borrow</a></li>
                         </ul>
                     </li>
                     <li class="nav-item active"> <a class="nav-link" href="#">Business <span
@@ -77,10 +84,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"> <img class="ngImg" src="/images/NG-logo.png" alt=""> </a>
                         <ul class="dropdown-menu dropdown-menu-end fade-down">
-                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="/images/NG-logo.png" alt="Ng logo"> <span class="countryName">Nigeria</span> </a></li>
-                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="/images/united-kingdom.png" alt="Uk logo"> <span class="countryName">United Kingdom</span> </a></li>
-                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="/images/ghana.png" alt="Ghana logo"> <span class="countryName"> Ghana</span> <span class="comingSoon">Coming Soon</span> </a></li>
-                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="/images/uganda.png" alt="Uganda logo"> <span class="countryName"> Uganda</span> <span class="comingSoon">Coming Soon</span> </a></li>
+                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="images/NG-logo.png" alt="Ng logo"> <span class="countryName px-2">Nigeria</span> </a></li>
+                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="images/united-kingdom.png" alt="Uk logo"> <span class="countryName px-2">United Kingdom</span> </a></li>
+                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="images/ghana.png" alt="Ghana logo"> <span class="countryName px-2"> Ghana</span> <span class="comingSoon shadow-lg">Coming Soon</span> </a></li>
+                            <li><a class="dropdown-item" href="#"> <img class="countryImg" src="images/uganda.png" alt="Uganda logo"> <span class="countryName px-2"> Uganda</span> <span class="comingSoon shadow-lg">Coming Soon</span> </a></li>
                         </ul>
                     </li>
                 </ul>
@@ -98,12 +105,12 @@
                     <p class="des py-3">We’re here to help you get the best out of your <br> money, no strings attached.
                         <br>
                         Welcome to your freedom!</p>
-                    <img class="cbnImg" src="/images/cbn.PNG" alt="kuda cbn"> <br>
+                    <img class="cbnImg" src="images/cbn.PNG" alt="kuda cbn"> <br>
                     <button class="getKuda">Get Kuda</button>
 
                 </div>
                 <div class="col-lg-6">
-                    <img src="/images/kuda-hero.png" alt="hero image">
+                    <img src="images/kuda-hero.png" alt="hero image">
                 </div>
             </div>
         </div>
