Adjusted the image link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <!-- <a class="nav-link" href="http://">Apply</a> -->
                     <li class="nav-item applyBtn"><a class="nav-link btn-lg navLinkBtn" href="#"> Apply </a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"> <img class="ngImg" src="/images/NG-logo.png" alt=""> </a>
+                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"> <img class="ngImg" src="images/NG-logo.png" alt=""> </a>
                         <ul class="dropdown-menu dropdown-menu-end fade-down">
                             <li><a class="dropdown-item" href="#"> <img class="countryImg" src="images/NG-logo.png" alt="Ng logo"> <span class="countryName px-2">Nigeria</span> </a></li>
                             <li><a class="dropdown-item" href="#"> <img class="countryImg" src="images/united-kingdom.png" alt="Uk logo"> <span class="countryName px-2">United Kingdom</span> </a></li>
