--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="card cardCard shadow-sm ">
                         <div class="card-body">
                             <h5 class="card-title"><i class="bi bi-credit-card-fill iColor"></i></h5>
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="card cardCard shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title"><i class="bi bi-credit-card-fill iColor"></i></h5>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="card cardCard shadow-sm ">
                         <div class="card-body">
                             <h5 class="card-title"><i class="bi bi-arrow-up-square-fill iiColor "></i></h5>
@@ -180,8 +180,8 @@
         </div>
         <div class="container-fluid secondCard py-4">
             <div class="row">
-                <div class="col-2"></div>
-                <div class="col-4">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-4">
                     <div class="card cardCard shadow-sm ">
                         <div class="card-body">
                             <h5 class="card-title"><i class="bi bi-credit-card-fill iColor"></i></h5>
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="card cardCard shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title"><i class="bi bi-credit-card-fill iColor"></i></h5>
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2"></div>
+                <div class="col-lg-2"></div>
 
             </div>
         </div>
@@ -242,10 +242,10 @@
     <section class="hero">
         <div class="container py-5">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 col-sm-8">
                     <img src="images/kuda-list.PNG" alt="hero image">
                 </div>
-                <div class="col-1"></div>
+                <div class="col-lg-1"></div>
                 <div class="col-lg-5 py-5 px-3">
                     <h1 class="thirdText">It’s your money, we just help you manage it.
 
@@ -267,7 +267,7 @@
     <section class="hero">
         <div class="container py-5">
             <div class="row">
-                <div class="col-lg-6 py-5">
+                <div class="col-lg-6 col-md-6 py-5">
                     <h1 class="anotherText">Save money as you spend <br> it, seriously.
                     </h1>
                     <p class="desText py-3">You can’t avoid spending. That’s how you pay for your needs. But we can help
@@ -279,7 +279,7 @@
                     <button class="openAccount">See all our Savings ></button>
 
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 col-sm-8">
                     <img src="images/transaction.PNG" alt="hero image">
                 </div>
             </div>
@@ -293,11 +293,11 @@
     <section class="hero">
         <div class="container py-5">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 col-sm-8">
                     <img src="images/block-card.PNG" alt="hero image">
                 </div>
                 <div class="col-1"></div>
-                <div class="col-lg-5 py-5 px-3">
+                <div class="col-lg-5 col-md-6 mb-4 mb-md-0 py-5 px-3">
                     <h1 class="thirdText">Turn off access, turn on safety.
 
                     </h1>
@@ -319,7 +319,7 @@
     <section class="hero">
         <div class="container py-5">
             <div class="row">
-                <div class="col-lg-6 py-5">
+                <div class="col-lg-6 col-md-6 mb-4 mb-md-0 py-5">
                     <h1 class="anotherText">We’re always happy to help you.
                     </h1>
                     <p class="desText py-3">You can chat with us on the app, slide into our DMs, tweet, leave an
@@ -331,7 +331,7 @@
                     <button class="openAccount">Get Help ></button>
 
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 col-sm-8">
                     <img src="images/kuda-hello.png" alt="hero image">
                 </div>
             </div>
@@ -346,10 +346,10 @@
     <section class="hero">
         <div class="container py-5">
             <div class="row px-3">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6 col-sm-8">
                     <img src="images/kuda-cash.png" alt="hero image">
                 </div>
-                <div class="col-lg-6 py-5 px-3">
+                <div class="col-lg-6 col-md-6 mb-4 mb-md-0 py-5 px-3 ">
                     <h1 class="anotherText px-5">Fees as clear as glass.
                     </h1>
                     <p class="desText py-3 px-5">We’re serious about free banking, and we will never, ever charge you
@@ -429,8 +429,8 @@
     <section class="py-5">
         <div class="container coloured shadow-sm py-5">
             <div class="row">
-                <div class="col-10 d-flex">
-                    <div class="col-5 px-5 py-5">
+                <div class="col-lg-10 d-flex">
+                    <div class="col-lg-5 px-5 py-5">
                         
                         <h1 class="headText1   w3-animate-top">Get the app now, dump <br> bank fees for good.</h1>
                         <p class="tFoot1 py-2 w3-animate-top">It only takes a few minutes to start enjoying free benefits.
@@ -439,8 +439,9 @@
                         <img class="cbnImg  w3-animate-zoom" src="images/cbn1.PNG" alt="kuda cbn"> <br>
                         <button class="getKuda  w3-animate-top">Get Kuda</button>
                     </div>
-                    <div class="col-2"></div>
-                    <div class="col-3"> <img class="imagehero w3-animate-zoom" src="images/kuda-hero.png" alt="hero image">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0"> <img class="imagehero w3-animate-zoom"
+                            src="images/kuda-hero.png" alt="hero image">
                     </div>
                 </div>
             </div>
@@ -460,7 +461,7 @@
             <section class="">
                 <!--Grid row-->
                 <div class="row py-5">
-                    <div class="col-1"> <img src="images/kuda-logo.png" alt=""></div>
+                    <div class="col-lg-1"> <img src="images/kuda-logo.png" alt=""></div>
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
